# configparser_rb

./: .gitignore  README.md  pyproject.toml
configparser_rb/: __init__.py  core.py  poethepoet.py  rotatedbase64.py  rotatedbits.py  tests.py
configparser_rb/locale/: configparser_rb.pot  es.po
configparser_rb/locale/es/LC_MESSAGES/: configparser_rb.mo
configparser_rb/tests/: test_core.py  test_rotatedbase64.py  test_rotatedbits.py
