[project]
name = "configparser_rb"
version = "1.0.0"
description = "Config parser with the ability to obfuscate keys with rotated bits in base64"
authors = [{name = "turulomio", email = "turulomio@yahoo.es"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = ["pydicts (>=1.1.0,<2.0.0)"]

[tool.poetry]
packages = [{include = "configparser_rb"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.3"
poethepoet = ">=0.29.0.1"
coverage = ">=7.6.4"


[tool.poetry.scripts]
configparser_rb_get='configparser_rb.core:get'
configparser_rb_set='configparser_rb.core:set'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
release = { script = "configparser_rb.poethepoet:release" }
translate = { script = "configparser_rb.poethepoet:translate" }
test   = "pytest" 
coverage = { script = "configparser_rb.poethepoet:coverage" }

[project.urls] 
homepage = "https://github.com/turulomio/configparser_rb/"
repository = "https://github.com/turulomio/configparser_rb/"
changelog = "https://github.com/turulomio/configparser_rb#changelog"
